# dataTrail

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
swiss_canyon_trail_2024/: README.md  app.py  export-results-111k-arrivee111k.csv  export-results-31k-arrivee31k.csv  swiss_canyon_trail_2024.ipynb
swiss_canyon_trail_2024/swiss_canyon_trail_2024/: app.py  df_finish.csv  export-results-16k-couvet16k.csv  export-results-51k-arrivee51k.csv  export-results-81k-arrivee81k.csv
trail_glieres_2025/: pyproject.toml
trail_glieres_2025/trail_glieres_2025/: df.csv  resultats_21km_duo.csv  resultats_21km_solo.csv  trail_glieres_2025.ipynb
