[tool.poetry]
name = "swiss-canyon-trail-2024"
version = "0.1.0"
description = ""
authors = ["Elorri Destizons <elorri.destizons@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
