[tool.poetry]
name = "trail-glieres-2025"
version = "0.1.0"
description = ""
authors = ["Elorri Destizons <elorri.destizons@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
numpy = "^2.3.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.6"
streamlit = "^1.50.0"
xlrd = "^2.0.2"
ipykernel = "^6.30.1"
camelot-py = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
